implementa configuração de CORS e endpoints de autenticação JWT no serviço social